--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
+#button {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: auto 18px;
+}
+
 .container {
     display: flex;
     width: 800px;
     height: 800px;
     flex-wrap: wrap;
     margin: 64px auto;
+    margin-top: 48px;
 }
 
 .square {
